Finalize homepage menu sync: update widgets and tab names

--- a/index.html
+++ b/index.html
@@ -264,14 +264,14 @@
             <!-- Chef Widget (Bottom Left) -->
             <div
                 class="absolute bottom-10 left-24 bg-black/40 backdrop-blur-md p-5 rounded-[25px] border border-white/10 flex items-center gap-5 transition-all hover:bg-black/60 hover:border-primary-yellow hover:translate-x-1 shadow-[0_15px_40px_rgba(0,0,0,0.1)] cursor-pointer chef-widget-trigger group pointer-events-auto">
-                <img src="https://images.unsplash.com/photo-1577219491135-ce391730fb2c?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&q=80"
-                    alt="Chef" class="w-[90px] h-[90px] rounded-full object-cover ring-2 ring-primary-yellow/50">
+                <img src="images/menu/Hungry Man's Breakfast $12.jpeg" alt="Chef Choice"
+                    class="w-[90px] h-[90px] rounded-full object-cover ring-2 ring-primary-yellow/50">
 
                 <div>
                     <h4 class="text-xl font-semibold mb-1 text-white">Chef's Choice</h4>
                     <div class="flex gap-3 text-sm text-gray-300 items-center">
                         <span class="flex items-center gap-1"><i data-lucide="award"
-                                class="w-4 h-4 text-primary-yellow"></i> Top Recommendation</span>
+                                class="w-4 h-4 text-primary-yellow"></i> Hungry Man's</span>
                     </div>
                 </div>
 
@@ -304,19 +304,19 @@
                         class="w-[90px] h-[90px] rounded-full object-cover">
 
                     <div>
-                        <h4 class="text-xl font-medium mb-2">Mexicoo Pizza</h4>
+                        <h4 class="text-xl font-medium mb-2">Three Cheeses Pizza</h4>
                         <div class="flex gap-3 text-sm text-gray-300 items-center">
                             <span class="flex items-center gap-1"><i data-lucide="flame"
-                                    class="w-3.5 h-3.5 text-orange-500 fill-orange-500"></i> 78 Calories</span>
+                                    class="w-3.5 h-3.5 text-orange-500 fill-orange-500"></i> Best Seller</span>
                         </div>
                     </div>
 
                     <div class="ml-auto text-right">
-                        <span class="block text-sm line-through text-gray-400">$7,90</span>
-                        <span class="text-[28px] font-semibold">$7.90</span>
+                        <span class="block text-sm line-through text-gray-400">$12.00</span>
+                        <span class="text-[28px] font-semibold">$10.00</span>
                         <div
                             class="bg-primary-yellow text-text-dark text-xs py-1.5 px-4 rounded-full flex items-center gap-2 ml-auto mt-2.5 w-fit">
-                            <i data-lucide="clock" class="w-3 h-3"></i> 30 dk.
+                            <i data-lucide="clock" class="w-3 h-3"></i> 20 min.
                         </div>
                     </div>
                 </div>
@@ -342,7 +342,7 @@
                 data-category="burgers">Burgers</button>
             <button
                 class="menu-tab px-8 py-3 rounded-full text-sm font-semibold transition-all bg-white text-text-gray hover:text-text-dark hover:shadow-md"
-                data-category="pastas">Pastas</button>
+                data-category="pastas">Noodles & Pastas</button>
             <button
                 class="menu-tab px-8 py-3 rounded-full text-sm font-semibold transition-all bg-white text-text-gray hover:text-text-dark hover:shadow-md"
                 data-category="pizzas">Pizzas</button>
@@ -1042,18 +1042,18 @@
         const menuData = {
             breakfast: [
                 { name: "Hungry Man’s Breakfast", price: "$12.00", img: "images/menu/Hungry Man's Breakfast $12.jpeg", rating: "5.0" },
-                { name: "Breakfast Quesadillas", price: "$7.00", img: "images/menu/Fairy Breakfast $5 (1 egg, 2 rations of bacon, tomato slice, 12 a sausage & chips).jpeg", rating: "4.8" },
+                { name: "Waffle Delight", price: "$6.00", img: "images/menu/Waffle Delight $6 (1 Waffle, Baby Spinach, bacon egg syrup).jpeg", rating: "4.8" },
                 { name: "Fairy Breakfast", price: "$5.00", img: "images/menu/Fairy Breakfast $5 (1 egg, 2 rations of bacon, tomato slice, 12 a sausage & chips).jpeg", rating: "4.9" }
             ],
             burgers: [
                 { name: "Big Fairy Burger", price: "$12.00", img: "images/menu/Big Fairy Burger $12 (2 beef patties, 2 cheese slices, 4 rashers of bacon, avocado, tomato and lettuce, burger roll with chips and salad).jpeg", rating: "5.0" },
                 { name: "Supreme Cheese Burger", price: "$10.00", img: "images/menu/Supreme Burger $9.jpeg", rating: "4.8" },
-                { name: "Chicken Crunchy", price: "$7.00", img: "images/menu/14 Chicken and chips $7.jpeg", rating: "4.9" }
+                { name: "Quarter Chicken", price: "$7.00", img: "images/menu/14 Chicken and chips $7.jpeg", rating: "4.7" }
             ],
             pastas: [
                 { name: "Shrimp & Salmon Fettuccine", price: "$15.00", img: "images/menu/Pasta_Platter.jpeg", rating: "5.0" },
-                { name: "Chicken Alfredo", price: "$12.00", img: "images/menu/Chicken Schnitzel $12.jpeg", rating: "4.9" },
-                { name: "Beef Napolitana", price: "$8.00", img: "images/menu/Garlic Beef Chicken Pork Rice $5.jpeg", rating: "4.8" }
+                { name: "Singapore Noodles", price: "$7.00", img: "images/menu/Singapore noodles $7.jpeg", rating: "4.8" },
+                { name: "Beef Chow Mein", price: "$8.00", img: "images/menu/Beef or Prawn Chow Mein $8 Chicken or Pork.jpeg", rating: "4.9" }
             ],
             pizzas: [
                 { name: "Three Cheeses", price: "$10.00", img: "images/menu/3 Cheeses Pizza $10.jpeg", rating: "5.0" },
