Update contact info and rename Breakfast Quesadilla to Fairy Breakfast

--- a/menu.html
+++ b/menu.html
@@ -333,12 +333,12 @@
             <div>
                 <h4 class="text-lg font-bold mb-6">Contact Us</h4>
                 <ul class="space-y-4 text-sm text-[#aaa]">
-                    <li class="flex items-center gap-3"><i data-lucide="phone" class="w-4 h-4"></i> +263 XX XXX XXXX
+                    <li class="flex items-center gap-3"><i data-lucide="phone" class="w-4 h-4"></i> +263 78 411 5251
                     </li>
                     <li class="flex items-center gap-3"><i data-lucide="mail" class="w-4 h-4"></i> info@fairycafe.co.zw
                     </li>
-                    <li class="flex items-center gap-3"><i data-lucide="map-pin" class="w-4 h-4"></i> 168 Robert Mugabe
-                        Way, Bulawayo</li>
+                    <li class="flex items-center gap-3"><i data-lucide="map-pin" class="w-4 h-4"></i> 127 Fife street
+                        between 13th and 14th Ave, Bulawayo</li>
                 </ul>
             </div>
         </div>
@@ -354,7 +354,7 @@
             {
                 category: "Bulawayo Breakfast",
                 items: [
-                    { name: "Breakfast Quesadillas", price: "$7.00", desc: "Filled with fluffy scrambled eggs, melted cheese & tomato & soup on the side" },
+                    { name: "Fairy Breakfast", price: "$7.00", desc: "Filled with fluffy scrambled eggs, melted cheese & tomato & soup on the side", image: "images/menu/Fairy Breakfast $5 (1 egg, 2 rations of bacon, tomato slice, 12 a sausage & chips).jpeg" },
                     { name: "Carnivore Breakfast", price: "$5.00", desc: "2 eggs, 2 rashers of bacon, 1 sausage" },
                     { name: "Club Sandwich", price: "$7.00", desc: "Baked Ham/Cheese | Chicken Mayo | Bacon | Egg & Cheese | Coleslaw Sandwich" },
                     { name: "Early Bird Breakfast", price: "$8.00", desc: "Toast 2 slices, 2 eggs, 50g cherry tomatoes, 2 rashers of bacon" },
