--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                     </div>
                 </div>
                 <div class="p-8 text-center">
-                    <h3 class="text-2xl font-bold text-text-dark mb-3">Breakfast Quesadillas</h3>
+                    <h3 class="text-2xl font-bold text-text-dark mb-3">Fairy Breakfast</h3>
                     <p class="text-text-gray text-sm mb-6 leading-relaxed">
                         Filled with fluffy scrambled eggs, melted cheese and tomato, served with soup on the side.
                     </p>
@@ -783,7 +783,8 @@
                             </div>
                             <div>
                                 <div class="font-semibold text-text-dark mb-1">Address</div>
-                                <div class="text-text-gray">168 Robert Mugabe Way, Bulawayo<br>Zimbabwe</div>
+                                <div class="text-text-gray">127 Fife street between 13th and 14th Ave,
+                                    Bulawayo<br>Zimbabwe</div>
                             </div>
                         </div>
                         <div class="flex items-start gap-4">
@@ -793,7 +794,7 @@
                             </div>
                             <div>
                                 <div class="font-semibold text-text-dark mb-1">Phone</div>
-                                <div class="text-text-gray">+263 XX XXX XXXX</div>
+                                <div class="text-text-gray">+263 78 411 5251</div>
                             </div>
                         </div>
                         <div class="flex items-start gap-4">
@@ -930,13 +931,12 @@
             <div>
                 <h4 class="text-lg font-bold mb-6">Contact Us</h4>
                 <ul class="space-y-4 text-sm text-[#aaa]">
-                    <li class="flex items-center gap-3"><i data-lucide="phone" class="w-4 h-4"></i> +263 XX XXX XXXX
+                    <li class="flex items-center gap-3"><i data-lucide="phone" class="w-4 h-4"></i> +263 78 411 5251
                     </li>
                     <li class="flex items-center gap-3"><i data-lucide="mail" class="w-4 h-4"></i> info@fairycafe.co.zw
                     </li>
-                    <li class="flex items-center gap-3"><i data-lucide="map-pin" class="w-4 h-4"></i> 168 Robert Mugabe
-                        Way,
-                        Bulawayo</li>
+                    <li class="flex items-center gap-3"><i data-lucide="map-pin" class="w-4 h-4"></i> 127 Fife street
+                        between 13th and 14th Ave, Bulawayo</li>
                 </ul>
             </div>
         </div>
