Update About section image and sync contact info/menu names across files

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
             <div class="order-1 md:order-2 about-image opacity-0 translate-x-10">
                 <div class="relative">
                     <div class="absolute -top-4 -left-4 w-full h-full bg-primary-yellow/20 rounded-[2rem]"></div>
-                    <img src="images/menu/6 Queen Prawns $16.jpeg" alt="Fairy Cafe Interior"
+                    <img src="images/menu/IMG_3280.JPG.jpeg" alt="Enjoying Magic Flavors"
                         class="relative rounded-[2rem] shadow-2xl w-full h-[500px] object-cover">
                 </div>
             </div>
