Fix broken Shrimp & Salmon Fettuccine image and improve accessibility

--- a/index.html
+++ b/index.html
@@ -1106,7 +1106,7 @@
                 { name: "Quarter Chicken", price: "$7.00", img: "images/menu/14 Chicken and chips $7.jpeg", rating: "4.7" }
             ],
             pastas: [
-                { name: "Shrimp & Salmon Fettuccine", price: "$15.00", img: "images/menu/Pasta_Platter.jpeg", rating: "5.0" },
+                { name: "Shrimp & Salmon Fettuccine", price: "$15.00", img: "images/menu/Shrimp & Salmon Fettucine $15,00 (shrimp, salmon, fettucine, pasta, garlic, onion, fresh cream& parsley), Beef Napolitano $8,00 (Beef strips, Garlic, mixed peppers, napolitana sauce), Creamy Chicken Pasta.jpeg", rating: "5.0" },
                 { name: "Singapore Noodles", price: "$7.00", img: "images/menu/Singapore noodles $7.jpeg", rating: "4.8" },
                 { name: "Beef Chow Mein", price: "$8.00", img: "images/menu/Beef or Prawn Chow Mein $8 Chicken or Pork.jpeg", rating: "4.9" }
             ],
