--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
 
         <!-- Mobile Menu Toggle -->
         <div class="md:hidden flex items-center gap-4">
-            <button id="mobile-menu-btn" class="p-2 text-text-dark hover:text-primary-yellow transition-colors">
+            <button id="mobile-menu-btn" class="p-2 text-text-dark hover:text-primary-yellow transition-colors"
+                aria-label="Toggle Menu">
                 <i data-lucide="menu" class="w-8 h-8"></i>
             </button>
         </div>
@@ -159,7 +160,8 @@
         class="fixed inset-0 bg-black/60 backdrop-blur-md z-[100] transition-opacity duration-300 opacity-0 invisible">
         <div
             class="absolute right-0 top-0 h-full w-[300px] bg-white p-10 flex flex-col transform translate-x-full transition-transform duration-300 ease-in-out shadow-2xl">
-            <button id="close-sidebar" class="self-end p-2 text-text-gray hover:text-text-dark mb-10">
+            <button id="close-sidebar" class="self-end p-2 text-text-gray hover:text-text-dark mb-10"
+                aria-label="Close Sidebar">
                 <i data-lucide="x" class="w-8 h-8"></i>
             </button>
 
@@ -897,14 +899,14 @@
                     best flavors in town with Fairy Cafe.</p>
                 <div class="flex gap-4">
                     <a href="#"
-                        class="w-10 h-10 bg-white/5 rounded-full flex justify-center items-center text-white hover:bg-primary-yellow hover:text-text-dark hover:-translate-y-1 transition-all"><i
-                            data-lucide="facebook" class="w-5 h-5"></i></a>
+                        class="w-10 h-10 bg-white/5 rounded-full flex justify-center items-center text-white hover:bg-primary-yellow hover:text-text-dark hover:-translate-y-1 transition-all"
+                        aria-label="Facebook"><i data-lucide="facebook" class="w-5 h-5"></i></a>
                     <a href="#"
-                        class="w-10 h-10 bg-white/5 rounded-full flex justify-center items-center text-white hover:bg-primary-yellow hover:text-text-dark hover:-translate-y-1 transition-all"><i
-                            data-lucide="twitter" class="w-5 h-5"></i></a>
+                        class="w-10 h-10 bg-white/5 rounded-full flex justify-center items-center text-white hover:bg-primary-yellow hover:text-text-dark hover:-translate-y-1 transition-all"
+                        aria-label="Twitter"><i data-lucide="twitter" class="w-5 h-5"></i></a>
                     <a href="#"
-                        class="w-10 h-10 bg-white/5 rounded-full flex justify-center items-center text-white hover:bg-primary-yellow hover:text-text-dark hover:-translate-y-1 transition-all"><i
-                            data-lucide="instagram" class="w-5 h-5"></i></a>
+                        class="w-10 h-10 bg-white/5 rounded-full flex justify-center items-center text-white hover:bg-primary-yellow hover:text-text-dark hover:-translate-y-1 transition-all"
+                        aria-label="Instagram"><i data-lucide="instagram" class="w-5 h-5"></i></a>
                 </div>
             </div>
 
